--- a/mandalawallpaper/src/main/res/layout-sw600dp/activity_intro.xml
+++ b/mandalawallpaper/src/main/res/layout-sw600dp/activity_intro.xml
@@ -6,7 +6,6 @@
     android:padding="16dp"
     tools:context=".ConfigurationActivity">
 
-
     <TextView
         android:id="@+id/tvThanks"
         android:layout_width="400dp"
@@ -15,7 +14,16 @@
         android:layout_margin="16dp"
         android:gravity="center"
         android:text="@string/thanks_for_installing"
-        android:textSize="16dp" />
+        android:textSize="20dp" />
+
+    <ImageView
+        android:id="@+id/ivLogo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_above="@id/tvThanks"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/mandala512" />
 
     <Button
         android:id="@+id/btSetWallpaper"
