--- a/mandalawallpaper/src/main/res/xml/mandala_wallpaper.xml
+++ b/mandalawallpaper/src/main/res/xml/mandala_wallpaper.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <wallpaper
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:thumbnail="@drawable/ic_launcher"
+    android:thumbnail="@drawable/mandala"
     android:description="@string/app_name"
     android:settingsActivity="com.codebutchery.mandalawallpaper.ConfigurationActivity"/>
